--- a/src/config/zh/about.mdx
+++ b/src/config/zh/about.mdx
@@ -1,4 +1,4 @@
-export const title = "你好，我是小孙同学～"
+export const title = "你好，我是7aK's～"
 
 <h3 class="my-10 text-center text-xl font-bold">{title}</h3>
 
