--- a/src/config/zh/links.mdx
+++ b/src/config/zh/links.mdx
@@ -3,10 +3,10 @@ export const title = "我的链接"
 <h3 class="my-10 text-center text-xl font-bold">{title}</h3>
 
 ```json
-name: "Guoqi Sun"
+name: "7aK's Blog"
 description: "Try, fail, retry. That's the rhythm of growth."
-link: "https://blog.sunguoqi.com"
-avatar: "https://assets.guoqi.dev/images/avatar.png"
+link: "https://www.memme.cn"
+avatar: "https://akcool.cn/logo.png"
 ```
 
 <h4 class="my-10 text-center">
