--- a/src/config/zh/intro.mdx
+++ b/src/config/zh/intro.mdx
@@ -1,7 +1,7 @@
 <div class="flex flex-col gap-2">
   <p>
-    🖥️ 前端小学生｜📸 摄影爱好者｜🛸 旅行探索家｜🚴 骑行蹭风选手｜🍎
-    科技产品发烧友
+    🖥️ 网络安全学生｜📸 一线吃瓜群众 ｜🛸 世界风景探索者｜🚴 骑行蹭风选手｜🍎
+    CTFer
   </p>
   <p>💬 路虽远行则将至，事虽难做则必成！</p>
 </div>
