--- a/src/config/en/links.mdx
+++ b/src/config/en/links.mdx
@@ -1,22 +1,21 @@
-export const title = "My Link"
+export const title = "我的链接"
 
 <h3 class="my-10 text-center text-xl font-bold">{title}</h3>
 
-```js
-name: "Guoqi Sun",
-description: "Try, fail, retry. That's the rhythm of growth.",
-link: "https://blog.sunguoqi.com",
-avatar: "https://assets.guoqi.dev/images/avatar.png",
+```json
+name: "7aK's Blog"
+description: "Try, fail, retry. That's the rhythm of growth."
+link: "https://www.memme.cn"
+avatar: "https://akcool.cn/logo.png"
 ```
 
 <h4 class="my-10 text-center">
-  Want to add a friend link? Please leave a comment in the comment area below,
-  and I will add it as soon as possible.
+  想要添加友情链接？请按照如下格式在评论区留言，我会及时添加。
 </h4>
 
-```js
-name: "your site name",
-description: "your site description",
-link: "your site link",
-avatar: "your site avatar",
+```json
+name: "your site name"
+description: "your site description"
+link: "your site link"
+avatar: "your site avatar"
 ```
