--- a/src/config/en/intro.mdx
+++ b/src/config/en/intro.mdx
@@ -1,8 +1,6 @@
 <div class="flex flex-col gap-2">
   <p>
-    🖥️ Front-end developer (React)｜📸 Photography enthusiast (Nikon)｜🛸 Travel
-    explorer (experiencer)｜🚴 Cycling freestyler (Java SILURO6-TOP 6)｜🍎
-    Technology product enthusiast (Apple & Xiaomi)
+  🖥️ Cybersecurity students｜📸 front-line onlookers｜🛸 world landscape explorers｜🚴 cyclists riding on the wind｜🍎 CTFer
   </p>
   <p>💬 Try, fail, retry. That's the rhythm of growth.</p>
 </div>
