--- a/src/config/en/about.mdx
+++ b/src/config/en/about.mdx
@@ -1,4 +1,4 @@
-export const title = "Hello, I'm Guoqi Sun ~"
+export const title = "Hello, I'm 7ak's ~"
 
 <h3 class="my-10 text-center text-xl font-bold">{title}</h3>
 
