--- a/src/config/en/links.mdx
+++ b/src/config/en/links.mdx
@@ -3,7 +3,7 @@ export const title = "我的链接"
 <h3 class="my-10 text-center text-xl font-bold">{title}</h3>
 
 ```json
-name: "7aK's Blog"
+name: "Kilm0r's Blog"
 description: "Try, fail, retry. That's the rhythm of growth."
 link: "https://www.memme.cn"
 avatar: "https://akcool.cn/logo.png"
