--- a/src/config/en/about.mdx
+++ b/src/config/en/about.mdx
@@ -1,4 +1,4 @@
-export const title = "你好，我是7aK's～"
+export const title = "你好，我是Kilm0r～"
 
 <div className="flex flex-col gap-8">
   <div className="flex flex-col items-center gap-4">
